deleted useless display and fixed long links overflowing the container

--- a/web-client/src/components/MessagePreview/MessagePreview.scss
+++ b/web-client/src/components/MessagePreview/MessagePreview.scss
@@ -2,8 +2,8 @@
   position: relative;
   background: #F4F4F4;
   border-radius: .4em;
-  display: inline-block;
   padding: 15px;
+  word-wrap: break-word;
 }
   
 .bubble-triangle {
